--- a/src/components/Contoh.css
+++ b/src/components/Contoh.css
@@ -21,6 +21,11 @@
     margin-bottom: 20px;
 }
 
+.card a {
+    text-decoration: none;
+    color: white;
+}
+
 .card img {
     width: max-content;
     height: 350px;
